--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
     "jquery": "^2.1.4",
+    "object-assign": "^4.0.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
     "vision": "^3.0.0"
