--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tiny",
   "version": "0.0.0",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server/index.js",
     "build": "webpack -p --progress",
     "dev": "webpack --progress --color --watch & nodemon"
   },
@@ -14,9 +14,11 @@
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
     "jquery": "^2.1.4",
+    "mysql": "^2.9.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
+    "sequelize": "^3.9.0",
     "vision": "^3.0.0"
   },
   "devDependencies": {
