--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "dev": "webpack --progress --color --watch & nodemon"
   },
   "dependencies": {
+    "bluebird": "^2.10.1",
+    "config": "^1.16.0",
     "flux": "^2.1.1",
     "good": "^6.3.0",
     "good-console": "^5.0.3",
     "hapi": "^9.3.1",
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
+    "joi": "^6.7.1",
     "jquery": "^2.1.4",
     "mysql": "^2.9.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
     "sequelize": "^3.9.0",
+    "shortid": "^2.2.2",
     "vision": "^3.0.0"
   },
   "devDependencies": {
