--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^0.13.3",
     "sequelize": "^3.9.0",
     "shortid": "^2.2.2",
+    "string-format": "^0.5.0",
     "vision": "^3.0.0"
   },
   "devDependencies": {
