--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tiny",
   "version": "0.0.0",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/server.js",
     "build": "webpack -p --progress",
     "dev": "webpack --progress --color --watch & nodemon"
   },
