--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "inert": "^3.0.1",
     "joi": "^6.7.1",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "mysql": "^2.9.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
