--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flux": "^2.1.1",
     "good": "^6.3.0",
     "good-console": "^5.0.3",
+    "handlebars": "^4.0.3",
     "hapi": "^9.3.1",
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
