--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "inert": "^3.0.1",
     "joi": "^6.7.1",
     "jquery": "^2.1.4",
+    "jquery-popup-overlay": "^1.7.4",
     "lodash": "^3.10.1",
     "mysql": "^2.9.0",
     "object-assign": "^4.0.1",
