--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "dev": "webpack --progress --color --watch & nodemon"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "bluebird": "^2.10.1",
+    "boom": "^2.9.0",
     "config": "^1.16.0",
     "flux": "^2.1.1",
     "good": "^6.3.0",
     "good-console": "^5.0.3",
     "handlebars": "^4.0.3",
     "hapi": "^9.3.1",
+    "hapi-auth-jwt": "^3.0.0",
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
     "joi": "^6.7.1",
     "jquery": "^2.1.4",
     "jquery-popup-overlay": "^1.7.4",
+    "jsonwebtoken": "^5.4.0",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "mysql": "^2.9.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
