--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^2.10.1",
     "boom": "^2.9.0",
     "config": "^1.16.0",
+    "cookies-js": "^1.2.2",
     "flux": "^2.1.1",
     "good": "^6.3.0",
     "good-console": "^5.0.3",
@@ -22,10 +23,8 @@
     "inert": "^3.0.1",
     "joi": "^6.7.1",
     "jquery": "^2.1.4",
-    "jquery-popup-overlay": "^1.7.4",
     "jsonwebtoken": "^5.4.0",
     "lodash": "^3.10.1",
-    "moment": "^2.10.6",
     "mysql": "^2.9.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
