--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "good-console": "^5.0.3",
     "handlebars": "^4.0.3",
     "hapi": "^9.3.1",
-    "hapi-auth-jwt": "^3.0.0",
+    "hapi-auth-jwt2": "^5.0.7",
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
     "joi": "^6.7.1",
