--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "good": "^6.3.0",
     "good-console": "^5.0.3",
     "handlebars": "^4.0.3",
-    "hapi": "^9.3.1",
+    "hapi": "^10.4.0",
     "hapi-auth-jwt2": "^5.0.7",
     "hapi-react-views": "^3.1.3",
     "inert": "^3.0.1",
@@ -32,13 +32,12 @@
     "sequelize": "^3.9.0",
     "shortid": "^2.2.2",
     "string-format": "^0.5.0",
-    "vision": "^3.0.0"
+    "vision": "^3.0.0",
+    "webpack": "^1.12.2"
   },
   "devDependencies": {
     "chai": "^3.3.0",
-    "code": "^1.5.0",
     "jsx-loader": "^0.13.2",
-    "lab": "^6.1.0",
     "mocha": "^2.3.3",
     "nodemon": "^1.4.1",
     "supertest": "^1.1.0",
