--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
+    "react-sticky": "^2.5.2",
     "sequelize": "^3.9.0",
     "shortid": "^2.2.2",
     "string-format": "^0.5.0",
