--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hapi": "^10.4.0",
     "hapi-auth-jwt2": "^5.0.7",
     "hapi-react-views": "^3.1.3",
+    "immutable": "^3.7.5",
     "inert": "^3.0.1",
     "joi": "^6.7.1",
     "jquery": "^2.1.4",
@@ -28,7 +29,9 @@
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
+    "react-redux": "^3.1.0",
     "react-sticky": "^2.5.2",
+    "redux": "^3.0.2",
     "sequelize": "^3.9.0",
     "shortid": "^2.2.2",
     "string-format": "^0.5.0",
@@ -36,11 +39,16 @@
     "webpack": "^1.12.2"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
     "chai": "^3.3.0",
     "istanbul": "^0.3.22",
     "jsx-loader": "^0.13.2",
     "mocha": "^2.3.3",
     "nodemon": "^1.4.1",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^2.1.5",
     "supertest": "^1.1.0",
     "webpack": "^1.12.1"
   }
