add task button now appears on milestone name hover

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "jsonwebtoken": "^5.4.0",
     "lodash": "^3.10.1",
     "mysql": "^2.9.0",
+    "normalizr": "^1.2.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
+    "react-modal": "^0.5.0",
     "react-redux": "^3.1.0",
     "react-sticky": "^2.5.2",
     "redux": "^3.0.2",
