use pivotal-UI for notifications

--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "normalizr": "^1.2.0",
     "object-assign": "^4.0.1",
     "path": "^0.11.14",
+    "pui-react-labels": "^2.0.0",
+    "pui-react-media": "^2.0.0",
+    "pui-react-notifications": "^2.0.0",
+    "pui-react-panels": "^2.0.0",
+    "pui-react-typography": "^2.0.0",
     "react": "^0.13.3",
     "react-modal": "^0.5.0",
     "react-redux": "^3.1.0",
