--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sequelize": "^3.9.0",
     "shortid": "^2.2.2",
     "string-format": "^0.5.0",
-    "vision": "^3.0.0"
+    "vision": "^3.0.0",
+    "redux-thunk": "~1.0.0"
   },
   "devDependencies": {
     "babel": "^5.8.23",
