--- a/package.json
+++ b/package.json
@@ -9,49 +9,55 @@
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
-    "bluebird": "^2.10.1",
-    "boom": "^2.9.0",
-    "config": "^1.16.0",
-    "flux": "^2.1.1",
-    "good": "^6.3.0",
-    "good-console": "^5.0.3",
-    "handlebars": "^4.0.3",
-    "hapi": "^10.4.0",
-    "hapi-auth-jwt2": "^5.0.7",
-    "hapi-react-views": "^3.1.3",
+    "bluebird": "^3.0.5",
+    "boom": "^3.0.0",
+    "config": "^1.17.1",
+    "good": "^6.4.0",
+    "good-console": "^5.2.0",
+    "handlebars": "^4.0.5",
+    "hapi": "^11.1.2",
+    "hapi-auth-jwt2": "^5.2.1",
+    "hapi-react-views": "^5.0.0",
     "immutable": "^3.7.5",
-    "inert": "^3.0.1",
-    "joi": "^6.7.1",
+    "inert": "^3.2.0",
+    "joi": "^7.0.0",
     "jquery": "^2.1.4",
-    "jsonwebtoken": "^5.4.0",
+    "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
     "mysql": "^2.9.0",
-    "normalizr": "^1.2.0",
+    "node-gyp": "^3.1.0",
     "object-assign": "^4.0.1",
-    "path": "^0.11.14",
-    "react": "^0.13.3",
-    "react-modal": "^0.5.0",
-    "react-redux": "^3.1.0",
-    "react-sticky": "^2.5.2",
-    "redux": "^3.0.2",
-    "sequelize": "^3.9.0",
-    "shortid": "^2.2.2",
+    "path": "^0.12.7",
+    "react": "^0.14.3",
+    "react-modal": "^0.6.1",
+    "react-redux": "^4.0.0",
+    "react-sticky": "^3.0.0",
+    "react-tabs": "^0.5.1",
+    "redux": "^3.0.4",
+    "redux-thunk": "^1.0.0",
+    "sequelize": "^3.14.1",
+    "shortid": "^2.2.4",
     "string-format": "^0.5.0",
-    "vision": "^3.0.0",
-    "redux-thunk": "~1.0.0"
+    "vision": "^4.0.1"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "chai": "^3.3.0",
-    "istanbul": "^0.3.22",
+    "babel": "^6.1.18",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-syntax-jsx": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "chai": "^3.4.1",
+    "istanbul": "^0.4.0",
     "jsx-loader": "^0.13.2",
-    "mocha": "^2.3.3",
-    "nodemon": "^1.4.1",
+    "mocha": "^2.3.4",
+    "nodemon": "^1.8.1",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^2.1.5",
     "supertest": "^1.1.0",
-    "webpack": "^1.12.1"
+    "webpack": "^1.12.9"
+  },
+  "babel": {
+    "plugins": ["syntax-jsx"]
   }
 }
