--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "object-assign": "^4.0.1",
     "path": "^0.12.7",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-sticky": "^3.0.0",
@@ -58,6 +59,8 @@
     "webpack": "^1.12.9"
   },
   "babel": {
-    "plugins": ["syntax-jsx"]
+    "plugins": [
+      "syntax-jsx"
+    ]
   }
 }
