use react router for routing

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hapi": "^11.1.2",
     "hapi-auth-jwt2": "^5.2.1",
     "hapi-react-views": "^5.0.0",
+    "history": "^1.13.1",
     "immutable": "^3.7.5",
     "inert": "^3.2.0",
     "joi": "^7.0.0",
@@ -32,9 +33,11 @@
     "react-bootstrap": "^0.28.1",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
     "react-sticky": "^3.0.0",
     "react-tabs": "^0.5.1",
     "redux": "^3.0.4",
+    "redux-simple-router": "0.0.10",
     "redux-thunk": "^1.0.0",
     "sequelize": "^3.14.1",
     "shortid": "^2.2.4",
