--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-router-bootstrap": "^0.19.3",
     "react-sticky": "^3.0.0",
     "react-tabs": "^0.5.1",
     "redux": "^3.0.4",
