--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "redux-thunk": "^1.0.0",
     "sequelize": "^3.14.1",
     "shortid": "^2.2.4",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "string-format": "^0.5.0",
     "vision": "^4.0.1"
   },
