--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "string-format": "^0.5.0",
+    "vague-time": "^1.3.0",
     "vision": "^4.0.1"
   },
   "devDependencies": {
