--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "test": "istanbul cover _mocha"
   },
   "dependencies": {
+    "babel-runtime": "^6.3.13",
     "bcrypt": "^0.8.5",
     "bluebird": "^3.0.5",
     "boom": "^3.0.0",
+    "classnames": "^2.2.1",
     "config": "^1.17.1",
+    "flexboxgrid": "^6.3.0",
     "good": "^6.4.0",
     "good-console": "^5.2.0",
     "handlebars": "^4.0.5",
@@ -25,6 +28,7 @@
     "jquery": "^2.1.4",
     "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
+    "material-ui": "^0.13.4",
     "mysql": "^2.9.0",
     "node-gyp": "^3.1.0",
     "object-assign": "^4.0.1",
@@ -37,6 +41,7 @@
     "react-router-bootstrap": "^0.19.3",
     "react-sticky": "^3.0.0",
     "react-tabs": "^0.5.1",
+    "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
     "redux-simple-router": "0.0.10",
     "redux-thunk": "^1.0.0",
@@ -56,6 +61,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "chai": "^3.4.1",
+    "css-loader": "^0.23.0",
     "istanbul": "^0.4.0",
     "jsx-loader": "^0.13.2",
     "mocha": "^2.3.4",
