--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "object-assign": "^4.0.1",
     "path": "^0.12.7",
     "react": "^0.14.3",
+    "react-addons-pure-render-mixin": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
