--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-gyp": "^3.1.0",
     "object-assign": "^4.0.1",
     "path": "^0.12.7",
+    "rc-steps": "^1.4.1",
     "react": "^0.14.3",
     "react-addons-pure-render-mixin": "^0.14.3",
     "react-bootstrap": "^0.28.1",
@@ -59,13 +60,14 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "chai": "^3.4.1",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.23.1",
     "istanbul": "^0.4.0",
     "jsx-loader": "^0.13.2",
     "mocha": "^2.3.4",
     "nodemon": "^1.8.1",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^2.1.5",
+    "style-loader": "^0.13.0",
     "supertest": "^1.1.0",
     "webpack": "^1.12.9"
   },
