--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-gyp": "^3.1.0",
     "object-assign": "^4.0.1",
     "path": "^0.12.7",
+    "query-string": "^3.0.0",
     "rc-steps": "^1.4.1",
     "react": "^0.14.3",
     "react-addons-pure-render-mixin": "^0.14.3",
@@ -44,6 +45,7 @@
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.0",
+    "request": "^2.69.0",
     "sequelize": "^3.14.1",
     "shortid": "^2.2.4",
     "socket.io": "^1.3.7",
