--- a/package.json
+++ b/package.json
@@ -8,48 +8,44 @@
     "test": "istanbul cover _mocha"
   },
   "dependencies": {
-    "babel-runtime": "^6.3.13",
+    "babel-runtime": "^6.6.1",
     "bcrypt": "^0.8.5",
-    "bluebird": "^3.0.5",
+    "bluebird": "^3.3.4",
     "boom": "^3.0.0",
-    "classnames": "^2.2.1",
-    "config": "^1.17.1",
+    "config": "^1.19.0",
     "flexboxgrid": "^6.3.0",
-    "good": "^6.4.0",
-    "good-console": "^5.2.0",
+    "good": "^6.6.0",
+    "good-console": "^5.3.1",
     "handlebars": "^4.0.5",
-    "hapi": "^13.0.0",
-    "hapi-auth-jwt2": "^5.2.1",
-    "hapi-react-views": "^5.0.0",
-    "history": "^2.0.0",
-    "immutable": "^3.7.5",
+    "hapi": "^13.1.0",
+    "hapi-auth-jwt2": "^5.4.1",
+    "hapi-react-views": "^5.0.2",
+    "history": "^2.0.1",
     "inert": "^3.2.0",
-    "joi": "^8.0.1",
-    "jquery": "^2.1.4",
-    "jsonwebtoken": "^5.4.1",
-    "lodash": "^4.4.0",
+    "joi": "^8.0.4",
+    "jquery": "^2.2.1",
+    "jsonwebtoken": "^5.7.0",
+    "lodash": "^3.10.1",
     "material-ui": "^0.14.4",
-    "mysql": "^2.9.0",
-    "node-gyp": "^3.1.0",
+    "mysql": "^2.10.2",
+    "node-gyp": "^3.3.1",
     "object-assign": "^4.0.1",
     "path": "^0.12.7",
-    "query-string": "^3.0.0",
-    "rc-steps": "^1.4.1",
-    "react": "^0.14.3",
-    "react-addons-pure-render-mixin": "^0.14.3",
-    "react-bootstrap": "^0.28.1",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.0",
+    "rc-steps": "^1.4.4",
+    "react": "^0.14.7",
+    "react-addons-pure-render-mixin": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.1",
     "react-router-bootstrap": "^0.20.1",
-    "react-sticky": "^3.0.0",
-    "react-tap-event-plugin": "^0.2.1",
-    "redux": "^3.0.4",
+    "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.3.1",
     "redux-thunk": "^1.0.0",
     "request": "^2.69.0",
-    "sequelize": "^3.14.1",
+    "sequelize": "^3.19.3",
     "shortid": "^2.2.4",
-    "socket.io": "^1.3.7",
-    "socket.io-client": "^1.3.7",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "string-format": "^0.5.0",
     "vague-time": "^1.3.0",
     "vision": "^4.0.1"
@@ -67,8 +63,7 @@
     "jsx-loader": "^0.13.2",
     "mocha": "^2.3.4",
     "nodemon": "^1.8.1",
-    "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.1.1",
+    "request-debug": "^0.2.0",
     "style-loader": "^0.13.0",
     "supertest": "^1.1.0",
     "webpack": "^1.12.9"
