--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.1",
     "react-router-bootstrap": "^0.20.1",
+    "react-sidebar": "^2.1.1",
     "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.0",
