--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^0.14.7",
     "react-addons-pure-render-mixin": "^0.14.7",
     "react-bootstrap": "^0.28.3",
+    "react-dropzone": "^3.3.2",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.1",
     "react-router-bootstrap": "^0.20.1",
