--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "boom": "^3.0.0",
     "config": "^1.19.0",
     "flexboxgrid": "^6.3.0",
+    "fuse.js": "^2.2.0",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
     "handlebars": "^4.0.5",
