--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fuse.js": "^2.2.0",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
+    "googleapis": "^4.0.0",
     "handlebars": "^4.0.5",
     "hapi": "^13.1.0",
     "hapi-auth-jwt2": "^5.4.1",
