--- a/package.json
+++ b/package.json
@@ -3,75 +3,75 @@
   "version": "0.0.0",
   "scripts": {
     "start": "node server/server.js",
-    "build": "webpack -p --progress",
+    "build": "webpack -p --progress --optimize-minimize",
     "dev": "webpack --progress --color --watch & nodemon",
     "test": "mocha"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1",
-    "bcrypt": "^0.8.5",
-    "bluebird": "^3.3.4",
-    "boom": "^3.0.0",
-    "config": "^1.19.0",
-    "flexboxgrid": "^6.3.0",
-    "fuse.js": "^2.2.0",
-    "good": "^6.6.0",
-    "good-console": "^5.3.1",
-    "googleapis": "^4.0.0",
-    "handlebars": "^4.0.5",
-    "hapi": "^13.1.0",
-    "hapi-auth-jwt2": "^5.4.1",
-    "hapi-react-views": "^5.0.2",
-    "history": "^2.0.1",
-    "inert": "^3.2.0",
-    "joi": "^8.0.4",
-    "jquery": "^2.2.1",
-    "jsonwebtoken": "^5.7.0",
-    "lodash": "^3.10.1",
-    "material-ui": "^0.14.4",
-    "mysql": "^2.10.2",
-    "node-gyp": "^3.3.1",
-    "object-assign": "^4.0.1",
-    "path": "^0.12.7",
-    "rc-steps": "^1.4.4",
-    "react": "^0.14.7",
-    "react-addons-pure-render-mixin": "^0.14.7",
-    "react-bootstrap": "^0.28.3",
-    "react-dropzone": "^3.3.2",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.1",
-    "react-router-bootstrap": "^0.20.1",
-    "react-sidebar": "^2.1.1",
-    "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.3.1",
-    "redux-thunk": "^1.0.0",
-    "request": "^2.69.0",
-    "sequelize": "^3.19.3",
-    "shortid": "^2.2.4",
-    "socket.io": "^1.4.5",
-    "socket.io-client": "^1.4.5",
-    "string-format": "^0.5.0",
-    "vague-time": "^1.3.0",
-    "vision": "^4.0.1"
+    "babel-runtime": "6.6.1",
+    "bluebird": "3.3.4",
+    "boom": "3.0.0",
+    "config": "1.19.0",
+    "flexboxgrid": "6.3.0",
+    "fuse.js": "2.2.0",
+    "good": "6.6.0",
+    "good-console": "5.3.1",
+    "googleapis": "4.0.0",
+    "handlebars": "4.0.5",
+    "hapi": "13.1.0",
+    "hapi-auth-jwt2": "5.4.1",
+    "hapi-react-views": "5.0.2",
+    "history": "2.0.1",
+    "inert": "3.2.0",
+    "joi": "8.0.4",
+    "jquery": "2.2.1",
+    "jsonwebtoken": "5.7.0",
+    "lodash": "3.10.1",
+    "material-ui": "0.14.4",
+    "mysql": "2.10.2",
+    "node-gyp": "3.3.1",
+    "object-assign": "4.0.1",
+    "path": "0.12.7",
+    "rc-steps": "1.4.4",
+    "react": "~0.14.8",
+    "react-dom": "~0.14.3",
+    "react-addons-pure-render-mixin": "0.14.7",
+    "react-bootstrap": "0.28.3",
+    "react-dropzone": "3.3.2",
+    "react-redux": "4.4.0",
+    "react-router": "2.0.1",
+    "react-router-bootstrap": "0.20.1",
+    "react-sidebar": "2.1.1",
+    "react-tap-event-plugin": "0.2.2",
+    "redux": "3.3.1",
+    "redux-thunk": "1.0.0",
+    "request": "2.69.0",
+    "sequelize": "3.19.3",
+    "shortid": "2.2.4",
+    "socket.io": "1.4.5",
+    "socket.io-client": "1.4.5",
+    "string-format": "0.5.0",
+    "vague-time": "1.3.0",
+    "vision": "4.0.1"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-syntax-jsx": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.4.1",
-    "css-loader": "^0.23.1",
-    "istanbul": "^0.4.0",
-    "jsx-loader": "^0.13.2",
-    "mocha": "^2.3.4",
-    "nodemon": "^1.8.1",
-    "request-debug": "^0.2.0",
-    "sinon": "^1.17.3",
-    "style-loader": "^0.13.0",
-    "supertest": "^1.1.0",
-    "webpack": "^1.12.9"
+    "babel": "6.1.18",
+    "babel-core": "6.2.1",
+    "babel-loader": "6.2.0",
+    "babel-plugin-syntax-jsx": "6.1.18",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.1.18",
+    "chai": "3.4.1",
+    "css-loader": "0.18.0",
+    "istanbul": "0.4.0",
+    "jsx-loader": "0.13.2",
+    "mocha": "2.3.4",
+    "nodemon": "1.8.1",
+    "request-debug": "0.2.0",
+    "sinon": "1.17.3",
+    "style-loader": "0.13.0",
+    "supertest": "1.1.0",
+    "webpack": "1.12.9"
   },
   "babel": {
     "plugins": [
