--- a/package.json
+++ b/package.json
@@ -2,76 +2,84 @@
   "name": "tiny",
   "version": "0.0.0",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "webpack -p --progress --optimize-minimize",
-    "dev": "webpack --progress --color --watch & nodemon",
+    "dev": "concurrently --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=dev nodemon\"",
     "test": "mocha"
   },
   "dependencies": {
-    "babel-runtime": "6.11.6",
-    "bluebird": "3.4.1",
-    "boom": "3.2.2",
-    "config": "1.21.0",
+    "babel-runtime": "6.6.1",
+    "bluebird": "3.3.4",
+    "boom": "3.0.0",
+    "config": "1.19.0",
     "flexboxgrid": "6.3.0",
-    "fuse.js": "2.4.1",
-    "good": "7.0.1",
-    "good-console": "6.1.2",
-    "googleapis": "12.0.0",
+    "fuse.js": "2.2.0",
+    "good": "6.6.0",
+    "good-console": "5.3.1",
+    "googleapis": "4.0.0",
     "handlebars": "4.0.5",
-    "hapi": "14.1.0",
-    "hapi-auth-jwt2": "7.0.1",
-    "hapi-react-views": "9.1.0",
-    "history": "3.0.0",
-    "inert": "4.0.1",
-    "joi": "9.0.4",
-    "jquery": "3.1.0",
-    "jsonwebtoken": "7.1.7",
-    "lodash": "4.14.1",
-    "material-ui": "0.15.2",
-    "mysql": "2.11.1",
-    "node-gyp": "3.4.0",
-    "object-assign": "4.1.0",
+    "hapi": "13.1.0",
+    "hapi-auth-jwt2": "5.4.1",
+    "hapi-react-views": "5.0.2",
+    "history": "2.0.1",
+    "inert": "3.2.0",
+    "joi": "8.0.4",
+    "jquery": "2.2.1",
+    "jsonwebtoken": "5.7.0",
+    "lodash": "3.10.1",
+    "material-ui": "0.14.4",
+    "mysql": "2.10.2",
+    "node-gyp": "3.3.1",
+    "object-assign": "4.0.1",
     "path": "0.12.7",
-    "rc-steps": "2.1.5",
-    "react": "~15.3.0",
-    "react-dom": "~15.3.0",
-    "react-addons-pure-render-mixin": "15.3.0",
-    "react-bootstrap": "0.30.1",
-    "react-dropzone": "3.5.3",
-    "react-redux": "4.4.5",
-    "react-router": "2.6.1",
-    "react-router-bootstrap": "0.23.1",
-    "react-sidebar": "2.2.1",
-    "react-tap-event-plugin": "1.0.0",
-    "redux": "3.5.2",
-    "redux-thunk": "2.1.0",
-    "request": "2.74.0",
-    "sequelize": "3.23.6",
-    "shortid": "2.2.6",
-    "socket.io": "1.4.8",
-    "socket.io-client": "1.4.8",
+    "rc-steps": "1.4.4",
+    "react": "~0.14.8",
+    "react-dom": "~0.14.3",
+    "react-addons-pure-render-mixin": "0.14.7",
+    "react-bootstrap": "0.28.3",
+    "react-dropzone": "3.3.2",
+    "react-redux": "4.4.0",
+    "react-router": "2.0.1",
+    "react-router-bootstrap": "0.20.1",
+    "react-sidebar": "2.1.1",
+    "react-tap-event-plugin": "0.2.2",
+    "redux": "3.3.1",
+    "redux-thunk": "1.0.0",
+    "request": "2.69.0",
+    "sequelize": "3.19.3",
+    "shortid": "2.2.4",
+    "socket.io": "1.4.5",
+    "socket.io-client": "1.4.5",
     "string-format": "0.5.0",
-    "vague-time": "2.4.0",
-    "vision": "4.1.0"
+    "vague-time": "1.3.0",
+    "vision": "4.0.1"
   },
   "devDependencies": {
-    "babel": "6.5.2",
-    "babel-core": "6.11.4",
-    "babel-loader": "6.2.4",
-    "babel-plugin-syntax-jsx": "6.8.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.11.1",
-    "chai": "3.5.0",
-    "css-loader": "0.23.1",
-    "istanbul": "0.4.4",
+    "babel": "6.1.18",
+    "babel-core": "6.2.1",
+    "babel-loader": "6.2.0",
+    "babel-plugin-syntax-jsx": "6.1.18",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.1.18",
+    "chai": "3.4.1",
+    "concurrently": "^2.2.0",
+    "cross-env": "^2.0.0",
+    "css-loader": "0.18.0",
+    "eslint": "^3.2.0",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "istanbul": "0.4.0",
     "jsx-loader": "0.13.2",
-    "mocha": "3.0.0",
-    "nodemon": "1.10.0",
+    "mocha": "2.3.4",
+    "nodemon": "1.8.1",
     "request-debug": "0.2.0",
-    "sinon": "1.17.5",
-    "style-loader": "0.13.1",
-    "supertest": "2.0.0",
-    "webpack": "1.13.1"
+    "sinon": "1.17.3",
+    "style-loader": "0.13.0",
+    "supertest": "1.1.0",
+    "webpack": "1.12.9"
   },
   "babel": {
     "plugins": [
