--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-runtime": "6.6.1",
     "bluebird": "3.3.4",
     "boom": "3.0.0",
+    "collab-analytics": "1.0.0",
+    "collab-db-application": "1.0.0",
     "config": "1.19.0",
     "flexboxgrid": "6.3.0",
     "fuse.js": "2.2.0",
