Integrated analytics into logging controllers

--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "jsonwebtoken": "5.7.0",
     "lodash": "3.10.1",
     "material-ui": "0.14.4",
+    "moment": "^2.14.1",
     "mysql": "2.10.2",
     "node-gyp": "3.3.1",
     "object-assign": "4.0.1",
     "path": "0.12.7",
     "rc-steps": "1.4.4",
     "react": "~0.14.8",
-    "react-dom": "~0.14.3",
     "react-addons-pure-render-mixin": "0.14.7",
     "react-bootstrap": "0.28.3",
+    "react-dom": "~0.14.3",
     "react-dropzone": "3.3.2",
     "react-redux": "4.4.0",
     "react-router": "2.0.1",
