add input validataion

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "boom": "3.0.0",
     "config": "1.19.0",
     "flexboxgrid": "6.3.0",
+    "formsy-material-ui": "^0.3.9",
+    "formsy-react": "^0.17.0",
     "fuse.js": "2.2.0",
     "good": "6.6.0",
     "good-console": "5.3.1",
@@ -34,9 +36,9 @@
     "path": "0.12.7",
     "rc-steps": "1.4.4",
     "react": "~0.14.8",
-    "react-dom": "~0.14.3",
     "react-addons-pure-render-mixin": "0.14.7",
     "react-bootstrap": "0.28.3",
+    "react-dom": "~0.14.3",
     "react-dropzone": "3.3.2",
     "react-redux": "4.4.0",
     "react-router": "2.0.1",
