--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "collab",
-  "version": "0.0.1",
+  "name": "Collab",
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/collab-tools/collab.git"
+  },
+  "license" : "GPL-3.0",
+  "version": "1.0.0",
   "scripts": {
     "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "webpack -p --progress --optimize-minimize",
