--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rc-steps": "1.4.4",
     "react": "~0.14.8",
     "react-addons-pure-render-mixin": "0.14.7",
+    "react-addons-shallow-compare": "^15.3.2",
     "react-bootstrap": "0.28.3",
     "react-dom": "~0.14.3",
     "react-dropzone": "3.3.2",
