--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "6.6.1",
     "bluebird": "3.3.4",
     "boom": "3.0.0",
+    "camelcase-keys": "^4.0.0",
     "collab-analytics": "1.0.0",
     "collab-db-application": "1.0.0",
     "config": "1.19.0",
