--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux": "3.3.1",
     "redux-thunk": "1.0.0",
     "request": "2.69.0",
+    "reselect": "^2.5.4",
     "sequelize": "3.19.3",
     "shortid": "2.2.4",
     "socket.io": "1.4.5",
