--- a/package.json
+++ b/package.json
@@ -67,10 +67,13 @@
     "babel-preset-react": "6.1.18",
     "chai": "3.4.1",
     "css-loader": "0.18.0",
+    "enzyme": "^2.7.0",
     "istanbul": "0.4.0",
     "jsx-loader": "0.13.2",
     "mocha": "2.3.4",
     "nodemon": "1.8.1",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^0.14.8",
     "request-debug": "0.2.0",
     "sinon": "1.17.3",
     "style-loader": "0.13.0",
