--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "node server/server.js",
     "build": "webpack -p --progress --optimize-minimize",
     "dev": "webpack --progress --color --watch & nodemon",
-    "test": "mocha"
+    "test": "mocha --recursive",
+    "fTest": "mocha --compilers js:babel-core/register \"./assets/app/test\" --recursive"
   },
   "dependencies": {
     "babel-runtime": "6.6.1",
@@ -65,6 +66,7 @@
     "babel-plugin-syntax-jsx": "6.1.18",
     "babel-preset-es2015": "6.1.18",
     "babel-preset-react": "6.1.18",
+    "babel-register": "^6.18.0",
     "chai": "3.4.1",
     "css-loader": "0.18.0",
     "enzyme": "^2.7.0",
@@ -72,7 +74,7 @@
     "jsx-loader": "0.13.2",
     "mocha": "2.3.4",
     "nodemon": "1.8.1",
-    "react-addons-test-utils": "^15.4.2",
+    "react-addons-test-utils": "~0.14.8",
     "react-dom": "^0.14.8",
     "request-debug": "0.2.0",
     "sinon": "1.17.3",
