--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.6.1",
+    "base64json": "^1.0.3",
     "bluebird": "3.3.4",
     "boom": "3.0.0",
     "camelcase-keys": "^4.0.0",
@@ -35,6 +36,7 @@
     "inert": "3.2.0",
     "joi": "8.0.4",
     "jquery": "2.2.1",
+    "js-cookie": "^2.1.3",
     "jsonwebtoken": "5.7.0",
     "lodash": "3.10.1",
     "material-ui": "0.14.4",
