--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-router-bootstrap": "0.20.1",
     "react-sidebar": "2.1.1",
     "react-tap-event-plugin": "0.2.2",
+    "react-treebeard": "^1.1.4",
     "redux": "3.3.1",
     "redux-thunk": "1.0.0",
     "request": "2.69.0",
