--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "webpack -p --progress --optimize-minimize",
     "dev": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=dev nodemon server/server.js\"",
-    "test": "cross-env NODE_ENV=dev mocha --require babel-core/register --require 'tests/setup.js' 'tests/**/*.spec.js'",
+    "test": "cross-env NODE_ENV=test mocha --require babel-core/register --recursive 'tests/setup.js' 'tests/**/*.spec.js'",
     "testF": "mocha --compilers js:babel-core/register \"./assets/app/test\" --recursive",
     "coverageB": "istanbul cover _mocha -- -R spec",
     "coverageF": "gulp front_end_test;",
