--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack -p --progress --optimize-minimize",
     "dev": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=dev nodemon server/server.js\"",
     "test": "mocha --compilers js:babel-core/register --recursive  test",
-    "testF": "mocha --compilers js:babel-core/register \"./assets/app/test\" --recursive",
+    "testF": "mocha --compilers js:babel-core/register \"./assets/app/test\" --recursive -w",
     "coverageB": "istanbul cover _mocha -- -R spec",
     "coverageF": "gulp front_end_test;",
     "coverage": "gulp front_end_test_subset;"
@@ -85,16 +85,18 @@
     "babel-preset-react": "6.1.18",
     "babel-register": "^6.18.0",
     "chai": "3.4.1",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
     "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
     "css-loader": "0.18.0",
+    "enzyme": "^2.7.0",
     "eslint": "^3.2.0",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
-    "enzyme": "^2.7.0",
     "gulp-jsx-coverage": "^0.3.8",
     "isparta": "^4.0.0",
     "istanbul": "^1.0.0-alpha",
