--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "coverage": "gulp front_end_test_subset;"
   },
   "dependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-register": "^6.22.0",
     "babel-runtime": "6.6.1",
     "base64json": "^1.0.3",
     "bluebird": "3.3.4",
@@ -25,9 +27,11 @@
     "collab-analytics": "1.0.0",
     "collab-db-application": "1.0.0",
     "config": "1.19.0",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.14.1",
     "flexboxgrid": "6.3.0",
-    "formsy-material-ui": "^0.3.9",
-    "formsy-react": "^0.17.0",
+    "formsy-material-ui": "^0.5.3",
+    "formsy-react": "^0.19.2",
     "fuse.js": "2.2.0",
     "good": "6.6.0",
     "good-console": "5.3.1",
@@ -35,7 +39,7 @@
     "handlebars": "4.0.5",
     "hapi": "13.1.0",
     "hapi-auth-jwt2": "5.4.1",
-    "hapi-react-views": "5.0.2",
+    "hapi-react-views": "^9.2.1",
     "history": "2.0.1",
     "inert": "3.2.0",
     "joi": "8.0.4",
@@ -43,27 +47,27 @@
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "5.7.0",
     "lodash": "3.10.1",
-    "material-ui": "0.14.4",
+    "material-ui": "^0.16.7",
     "moment": "^2.14.1",
     "mysql": "2.10.2",
     "node-gyp": "3.3.1",
     "object-assign": "4.0.1",
     "path": "0.12.7",
     "rc-steps": "1.4.4",
-    "react": "~0.14.8",
-    "react-addons-pure-render-mixin": "0.14.7",
+    "react": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
     "react-bootstrap": "0.28.3",
-    "react-dom": "~0.14.3",
-    "react-dropzone": "3.3.2",
+    "react-dom": "^15.4.2",
+    "react-dropzone": "^3.9.2",
     "react-ga": "^2.1.2",
-    "react-redux": "4.4.0",
+    "react-redux": "^5.0.2",
     "react-router": "2.0.1",
     "react-router-bootstrap": "0.20.1",
     "react-sidebar": "2.1.1",
-    "react-tap-event-plugin": "0.2.2",
+    "react-tap-event-plugin": "^2.0.1",
     "react-treebeard": "^1.1.4",
-    "redux": "3.3.1",
+    "redux": "^3.6.0",
     "redux-thunk": "1.0.0",
     "request": "2.69.0",
     "reselect": "^2.5.4",
