--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
-    "react-bootstrap": "0.28.3",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.2",
     "react-ga": "^2.1.2",
     "react-redux": "^5.0.2",
-    "react-router": "2.0.1",
-    "react-router-bootstrap": "0.20.1",
+    "react-router": "^3.0.2",
+    "react-router-bootstrap": "^0.23.1",
     "react-sidebar": "2.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-treebeard": "^1.1.4",
@@ -108,7 +108,7 @@
     "jsx-loader": "0.13.2",
     "mocha": "^2.3.4",
     "nodemon": "1.8.1",
-    "react-addons-test-utils": "~0.14.8",
+    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^0.14.8",
     "request-debug": "0.2.0",
     "sinon": "1.17.3",
