--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,18 @@
     "plugins": [
         "react",
         "jsx-a11y"
-    ]
+    ],
+
+    "rules": {
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "import/no-extraneous-dependencies": [
+        "error", {"devDependencies": ["**/*.test.js", "**/*.spec.js"]}
+      ],
+      "prefer-arrow-callback": [
+        "warn", { "allowNamedFunctions": false }
+      ],
+    },
+    "env": {
+      "mocha": true
+    }
 }
