--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "6.2.1",
     "babel-loader": "6.2.0",
+    "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-syntax-jsx": "6.1.18",
     "babel-preset-es2015": "6.1.18",
     "babel-preset-react": "6.1.18",
@@ -101,7 +102,9 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
+    "gulp": "^3.9.1",
     "gulp-jsx-coverage": "^0.3.8",
+    "gulp-mocha": "^3.0.1",
     "isparta": "^4.0.0",
     "istanbul": "^1.0.0-alpha",
     "jsdom": "^9.9.1",
