--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=dev nodemon server/server.js\"",
     "test": "cross-env NODE_ENV=test mocha --require babel-core/register --recursive 'tests/setup.js' 'tests/**/*.spec.js'",
     "testF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test\" --recursive -w",
-    "testFF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test/components/Common/\" --recursive -w",
+    "testFF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test/actions/\" --recursive -w",
     "coverageB": "istanbul cover _mocha -- -R spec",
     "coverageF": "gulp front_end_test;",
     "coverage": "gulp front_end_test_subset;"
@@ -114,8 +114,10 @@
     "nodemon": "1.8.1",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^0.14.8",
+    "redux-mock-store": "^1.2.2",
     "request-debug": "0.2.0",
     "sinon": "1.17.3",
+    "sinon-stub-promise": "^4.0.0",
     "style-loader": "0.13.0",
     "supertest": "1.1.0",
     "webpack": "1.12.9"
