--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.2",
     "react-ga": "^2.1.2",
+    "react-markdown": "^2.4.5",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
@@ -110,6 +111,7 @@
     "isparta": "^4.0.0",
     "istanbul": "^1.0.0-alpha",
     "jsdom": "^9.9.1",
+    "json-loader": "^0.5.4",
     "jsx-loader": "0.13.2",
     "mocha": "^2.3.4",
     "nodemon": "1.8.1",
