Add flightplan for deployment

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
+    "flightplan": "^0.6.15",
     "gulp": "^3.9.1",
     "gulp-jsx-coverage": "^0.3.8",
     "gulp-mocha": "^3.0.1",
