--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "node-gyp": "3.3.1",
     "object-assign": "4.0.1",
     "path": "0.12.7",
-    "rc-steps": "1.4.4",
+    "rc-steps": "^2.5.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
