--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "chai": "3.4.1",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
+    "chromedriver": "^2.32.3",
     "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
     "css-loader": "0.18.0",
@@ -114,6 +115,7 @@
     "json-loader": "^0.5.4",
     "jsx-loader": "0.13.2",
     "mocha": "^2.3.4",
+    "nightwatch": "^0.9.16",
     "nodemon": "1.8.1",
     "nyc": "^11.2.1",
     "react-addons-perf": "^15.4.2",
