--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "nightwatch": "^0.9.16",
     "nodemon": "1.8.1",
     "nyc": "^11.2.1",
+    "puppeteer": "^0.11.0",
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^0.14.8",
