Update CircleCI config to run e2e tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "cross-env NODE_ENV=test nyc mocha --require babel-core/register --recursive 'tests/setup.js' 'tests/**/*.spec.js'",
     "testF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test\" --recursive -w",
     "testFF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test/containers/\" --recursive -w",
-    "test:e2e": "cross-env NODE_ENV=dev nightwatch",
+    "test:e2e": "cross-env NODE_ENV=test nightwatch",
     "coverageF": "gulp front_end_test;",
     "coverage": "gulp front_end_test_subset;"
   },
