--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ dependencies:
     - cd collab-analytics && npm link
 
     - npm link collab-analytics collab-db-application
-    - sed "s/YOUR_DB_USERNAME/ubuntu/g; s|TEST_USER_ID|$TEST_USER_ID|g; s|TEST_EMAIL|$TEST_EMAIL|g; s|TEST_REFRESH_TOKEN|$TEST_REFRESH_TOKEN|g; s|TEST_DISPLAY_IMAGE|$TEST_DISPLAY_IMAGE|g" config/_local-template.json > config/local-test.json
+    - sed "s/YOUR_DB_USERNAME/ubuntu/g; s|GOOGLE_SECRET|$GOOGLE_SECRET|g; s|TEST_USER_ID|$TEST_USER_ID|g; s|TEST_EMAIL|$TEST_EMAIL|g; s|TEST_REFRESH_TOKEN|$TEST_REFRESH_TOKEN|g; s|TEST_DISPLAY_IMAGE|$TEST_DISPLAY_IMAGE|g" config/_local-template.json > config/local-test.json
 
 database:
   override:
@@ -30,13 +30,13 @@ test:
   override:
     # Run API tests
     - npm run test
-    # Set up test account in DB for e2e tests
-    - mysql -u ubuntu -e "INSERT INTO collab_test.users (id, google_id, email, display_name, display_image, google_refresh_token) values ('$TEST_USER_ID', '$TEST_GOOGLE_ID', '$TEST_USER_ID', '$TEST_EMAIL', 'NUSCollab TestAccount', '$TEST_DISPLAY_IMAGE', '$TEST_REFRESH_TOKEN');"
     # Start app server in background
-    - npm run start:test
+    - npm run start:test:
         background: true
+    # Set up test account in DB for e2e tests
+    - mysql -u ubuntu -e "INSERT INTO collab_test.users (id, google_id, email, display_name, display_image, google_refresh_token, created_at, updated_at) values ('$TEST_USER_ID', '$TEST_GOOGLE_ID', '$TEST_EMAIL', 'NUSCollab TestAccount', '$TEST_DISPLAY_IMAGE', '$TEST_REFRESH_TOKEN', '2017-09-24 09:25:01', '2017-09-24 09:25:01');"
     # Wait for app to start
-    - curl --retry 30 --retry-delay 2 -v http://localhost:8080
+    - for i in {1..60}; do if $(curl --output /dev/null --silent --head --fail http://localhost:8080); then break; else printf '.'; sleep 1; fi; done
+    - sleep 20
     # Run end-to-end tests
     - npm run test:e2e
-    
