End to end tests (#27)

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "webpack -p --progress --optimize-minimize",
     "dev": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=dev nodemon server/server.js\"",
+    "start:test": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=test nodemon server/server.js\"",
     "test": "cross-env NODE_ENV=test nyc mocha --require babel-core/register --recursive 'tests/setup.js' 'tests/**/*.spec.js'",
     "testF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test\" --recursive -w",
     "testFF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test/containers/\" --recursive -w",
+    "test:e2e": "cross-env NODE_ENV=test nightwatch",
     "coverageF": "gulp front_end_test;",
     "coverage": "gulp front_end_test_subset;"
   },
@@ -93,6 +95,7 @@
     "chai": "3.4.1",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
+    "chromedriver": "^2.32.3",
     "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
     "css-loader": "0.18.0",
@@ -114,8 +117,10 @@
     "json-loader": "^0.5.4",
     "jsx-loader": "0.13.2",
     "mocha": "^2.3.4",
+    "nightwatch": "^0.9.16",
     "nodemon": "1.8.1",
     "nyc": "^11.2.1",
+    "puppeteer": "^0.11.0",
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^0.14.8",
